# meta-words

./: CMakeLists.txt  README.md
include/mam/meta_words/: meta_word.h  runner.h
source/: main.cpp
source/whisper.cpp/: runner.cpp
test/: main.cpp
